<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context="com.example.admin.threeactivitieshw2.MainActivity">

    <Button
        android:text="@string/take_and_display_picture"
        android:id="@+id/takeDisplayPicture"
        android:onClick="buttonPressed"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/emi_calculator"
        android:textSize="30sp"
        android:id="@+id/emiCalculator"
        android:onClick="buttonPressed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/person_form"
        android:id="@+id/personForm"
        android:textSize="30sp"
        android:onClick="buttonPressed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
