<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.threeactivitieshw2.emiCalculatorActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:hint="@string/loan_amount"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:max="10000"
        android:min="100"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:hint="@string/roi"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:max="15"
        android:layout_marginBottom="10dp"
        android:min="0"
        android:progress="5"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/loan_tenure"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:max="30"
        android:min="0"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/amount"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_height="wrap_content" />
</LinearLayout>
